# my-cmake-cookbook

chapter-01/recipe-02/cxx-example/: CMakeLists.txt
chapter-01/recipe-03/cxx-example/: CMakeLists.txt  Message.cpp  Message.hpp  hello-world.cpp
chapter-01/recipe-03/cxx-objlib-example/: CMakeLists.txt
chapter-01/recipe-04/cxx-example/: CMakeLists.txt
chapter-01/recipe-05/cxx-example/: CMakeLists.txt
chapter-01/recipe-06/: description.txt
chapter-01/recipe-06/example/: CMakeLists.txt
chapter-01/recipe-07/: description.txt
chapter-01/recipe-07/example/: CMakeLists.txt
chapter-01/recipe-08/: description.txt
chapter-01/recipe-08/cxx-example/: CMakeLists.txt  compute_areas.cpp  geometry_circle.cpp  geometry_circle.hpp  geometry_polygon.cpp  geometry_polygon.hpp  geometry_rhombus.cpp  geometry_rhombus.hpp  geometry_square.cpp  geometry_square.hpp
chapter-01/recipe-09/cxx-example/: Animal.cpp  Animal.hpp  CMakeLists.txt  Cat.hpp  Dog.hpp  Factory.hpp  animal-farm.cpp
chapter-01/recipe-10/: description.txt
chapter-01/recipe-10/cxx-example/: CMakeLists.txt  compute-areas.cpp
chapter-02/recipe-01/: description.txt
chapter-02/recipe-01/example/: CMakeLists.txt
chapter-02/recipe-02/: description.txt
chapter-02/recipe-02/cxx-example/: CMakeLists.txt  hello-world.cpp
chapter-02/recipe-03/: description.txt
chapter-02/recipe-04/: description.txt
chapter-02/recipe-05/: description.txt
chapter-02/recipe-06/: description.txt
chapter-03/recipe-01/: description.txt
chapter-03/recipe-02/: description.txt
(+11 files in other folders)
